css/style.css
@charset "utf-8";
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700');
body {
  margin: 0px;
  padding: 0px;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 1.5em;
  background-color: #ffffff;
  color: #000000;
}
h3,
h5 {
  margin: 0px;
  padding: 0px;
  text-align: center;
}
.searchTool form div {
  width: 100%;
  text-align: center;
}
.searchResults {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}
.imageShown {
  flex: 1;
}

